clean root npm files

--- a/simulation_vis/package.json
+++ b/simulation_vis/package.json
@@ -67,5 +67,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://SongMyungshin.github.io/mobility"
+  "homepage": "https://SongMyungshin.github.io/mobility-simulation"
 }
